--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,4 +7,4 @@ jobs:
       - name: clone code
         uses: actions/checkout@v2
       - name: docker build
-        run: docker build -t stereo2025/skypro_apython_app:$GITHUB_REF_NAME-$GITHUB_RIN_ID .
+        run: docker build -t stereo2025/skypro_apython_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
