--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,3 +8,7 @@ jobs:
         uses: actions/checkout@v2
       - name: docker build
         run: docker build -t stereo2025/skypro_apython_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker login
+        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: docker push
+        run: stereo2025/skypro_apython_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
